--- a/hystrix-service/pom.xml
+++ b/hystrix-service/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>stub</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.0.0</version>
+        </dependency>
     </dependencies>
 
 </project>
