--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,8 @@
         <module>hystrix-dashboard</module>
         <module>feign-service</module>
         <module>zuul-proxy</module>
+        <module>config-server</module>
+        <module>config-client</module>
     </modules>
 
 </project>
