--- a/config-client/src/main/resources/bootstrap.yml
+++ b/config-client/src/main/resources/bootstrap.yml
@@ -13,6 +13,11 @@ spring:
         service-id: config-server
       username: terrencewuxl
       password: 123456
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 eureka:
   client:
     service-url:
