--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -16,7 +16,17 @@ spring:
       user:
         name: terrencewuxl
         password: 123456
+    rabbitmq:
+      host: localhost
+      port: 5672
+      username: guest
+      password: guest
 eureka:
     client:
         service-url:
             defaultZone: http://localhost:8001/eureka/
+management:
+  endpoints:
+    web:
+      exposure:
+        include: 'bus-refresh'
